2006-05-09  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: make sure we do NOT link in object files from the progs itself,
    they contain int/void main(), and we don't want that inside the libgw.a in
    order to allow users re-usage of the code inside the lib. Otherwise we would
    get a 'duplicate define main()' link error, if an external module tries to
    link against libgw.a after a successfull install.
    
2006-05-09  Stipe Tolj  <stolj at kannel.org>
  * gw/bb_store.c, gw/bearerbox.[ch]: detach the two queues 'incoming_sms' and
    'outgoing_sms' from the binding of bb_store.c. Now we pass a dispatcher
    function as argument to store_load() in order to let it access local scoped
    variables in the callers space.

2006-05-08  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: adding installing of all .h and .def files in the install 
    target, including the gw directory. This is required if external modules
    implementing own functionality will use gwlib and gw functions that are
    installed to the system.

2006-05-05  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed #337. We must set RECONNECT status on connection
    before we put local queued messages into global queue.
    Thanks to <pch at coolsystems.dk> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gwlib/list.h: added example to the comment how to use gwlist_sort function.
    Thanks to Wilfried Goesgens <w.goesgens at chaosindustries.de> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: fixed memory leak.
    Thanks to Rafael <rafael at atgcaribbean.com> for patch.
    [Msg-Id: <44510365.8070000@atgcaribbean.com>]

2006-04-24 Andreas Fink <andreas@fink.org>
  * gw/smsc/smsc_at.c, gw/msg.h, gw/smsbox.c, gw/urltrans.c
    added new parameter %f to show the SMSC number from which an incoming sms
    is arriving. Only valid for AT.

2006-04-19  Alexander Malysh <amalysh at kannel.org>